--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "testbot",
-  "version": "0.0.1",
-  "description": "A bot for testing, baby.",
+  "name": "mentor-request-bot",
+  "version": "1.0.0",
+  "description": "A bot for managing requests for mentors at hackathons.",
   "author": {
     "name": "Andrew Kerr"
   },
